# github-repo-idea-miner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: blueprints.yaml  profiles.yaml  scoring.yaml
docs/: code-review-observations.md  implementation-handoff.md
docs/reviews/: 2026-06-15-2209-repo-engineering-review.md  2026-06-15-2219-repo-engineering-review.md  2026-06-15-2229-repo-engineering-review.md  2026-06-15-2236-repo-engineering-review.md
reports/: kanban-drafts.md  latest.json  latest.md
src/reporadar/: __init__.py  cache.py  cli.py  config.py  models.py  pipeline.py
src/reporadar/analysis/: clustering.py  dedupe.py  ideas.py  readme.py  scoring.py
src/reporadar/local/: scanner.py  tags.py
src/reporadar/reports/: json_report.py  kanban.py  markdown.py  report.py
src/reporadar/sources/: github.py
src/reporadar/templates/: kanban_task.md.j2  report.md.j2
tests/: test_cache.py  test_cli.py  test_cli_mine.py  test_clustering.py  test_config.py  test_dedupe.py  test_github_source.py  test_ideas.py  test_local_scanner.py  test_markdown_report.py  test_models.py  test_readme_analysis.py  test_scoring.py
